--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,4 +15,9 @@
     </li>
   </ul>
 
+  <div id="wrapper">
+    <div id="articles"></div>
+    <div id="notes"></div>
+  </div>
+
 <% include partials/footer %>
