--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,3 +10,25 @@
     <link rel="stylesheet" href="/css/app.css">
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg bg-primary">
+    <div class="collapse navbar-collapse" id="navbarColor02">
+        <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class="btn btn-info scrape-new" href="/articles">SCRAPE NEW ARTICLES</a>
+        </li>
+        <li class="nav-item">
+            <a class="btn btn-info clear" href="/clear">CLEAR ARTICLES</a>
+        </li>
+        <li class="nav-item">
+            <a class="btn nav-link saved" href="/saved">SAVED ARTICLES</a>
+        </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="jumbotron text-center">
+    <div class="caption">
+        <h1>MONGO SCRAPER</h1>
+    </div>
+</div>
