saved route errors

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
             <a class="btn btn-info clear" href="/clear">CLEAR ARTICLES</a>
         </li>
         <li class="nav-item">
-            <a class="btn nav-link saved" href="/saved">SAVED ARTICLES</a>
+            <a class="btn nav-link saved" href="/articles/saved">SAVED ARTICLES</a>
         </li>
         </ul>
     </div>
