--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <div class="articles">
 
     <div class="container-fluid article-container">
-      <div data-_id="<%=Article[i]._id%>" class="card card-id">
+      <div data-_id="<%=Article[i]._id%>" class="card card-id" data="<%=Article[i]._id%>" >
         <div class="card-header">
           <h3>
             <a class="article-link" target="_blank" rel="noopener noreferrer" href="<%=Article[i].link%>">
