--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,17 @@
 .card-id {
     margin: 15px;
 }
+
+#comments {
+    margin-left: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#h4-body {
+    margin-top: 20px;
+}
+
+#savecomment {
+    margin: 20px;
+}
